# ChartProject

./: .env.example  .gitignore  AggregateNarrativesRunbook.md  Makefile  ProjectPlan.md  README.md  TODO.md  TrackedAuthorRefreshRunbook.md  TweetIngestionRunbook.md  compose.yaml  ideas.md  pyproject.toml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  tracked_authors.py
backend/app/db/: base.py  models.py
backend/app/models/: __init__.py  aggregate_view_snapshot.py  cohort_tag.py  ingestion_run.py  managed_author_view.py  managed_narrative.py  market_price_point.py  mixins.py  podcast_appearance.py  podcast_belief.py  podcast_episode.py  podcast_person.py  podcast_show.py  raw_ingestion_artifact.py  tweet.py  tweet_keyword.py  tweet_mood_score.py  tweet_narrative_match.py  tweet_price_mention.py  tweet_reference.py  tweet_sentiment_score.py  user.py  user_cohort_tag.py
backend/app/schemas/: health.py
backend/app/services/: aggregate_mood_view.py  aggregate_narrative_view.py  aggregate_snapshot_cache.py  author_bitcoin_mentions_view.py  author_keyword_heatmap_view.py  author_mood_view.py  author_registry.py  author_sentiment_view.py  author_vs_btc_view.py  coinbase_client.py  coingecko_client.py  fred_client.py  health.py  ingestion.py  keywords.py  managed_narratives.py  market_data.py  moods.py  normalization.py  podcast_narrative_mix_view.py  podcast_person_view.py  price_mention_extractor.py  price_mention_view.py  price_mentions.py  sentiment.py  tracked_author_refresh.py  twelvedata_client.py  twitterapi_client.py  user_settings.py  validation.py
backend/chartproject_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_core_schema.py  0002_add_ingestion_progress_fields.py  0003_add_market_price_points.py  0004_add_tweet_sentiment_scores.py  0005_add_tweet_keywords.py  0006_add_tweet_mood_scores.py  (+8 more)
frontend/: index.html  (+4 more)
(+166 files in other folders)
