[project]
name = "chartproject-backend"
version = "0.1.0"
description = "Local-first backend for X/Twitter research ingestion and visualization."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.1.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.0",
  "torch>=2.6.0",
  "transformers>=4.48.0",
  "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
